--- a/12_Theme_Multi_Product_Option_2/Views/Shared/_Layout.cshtml
+++ b/12_Theme_Multi_Product_Option_2/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,400,600,700,800' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-
+    <link href='/static/css' rel='stylesheet' type='text/css'>
     @RenderSection("health", required: false)
     <script src="//cdn.anpero.com/cdn/assets/plugins/jquery-1.10.2.min.js"></script>
 
